# ws-basico

./: .gitignore  README.md
basico/cliente/include/soap/: Cliente.hpp  servidorPortBinding.hello.req.xml  servidorPortBinding.nsmap  soapC.cpp  soapClientLib.cpp  soapStub.h  soapservidorPortBindingProxy.h
basico/cliente/src/: main.cpp
basico/servidor/: build.xml
basico/servidor/nbproject/: jaxws-build.xml  project.properties  project.xml
basico/servidor/web/: index.jsp
cliente/: CMakeLists.txt
cliente/config/: gsoap_config.cmake
cliente/include/soap/: soapH.h  soapservidorPortBindingObject.h
cliente/src/: main.cpp
servidor/nbproject/: genfiles.properties  jax-ws.xml
servidor/nbproject/private/: private.properties
servidor/src/java/org/prueba1/servidor/: servidor.java
ssl/cliente/config/: gsoap_config.cmake
ssl/cliente/include/soap/: servidorPortBinding.hello.res.xml  soapClient.cpp  soapServer.cpp  soapServerLib.cpp
ssl/servidor/: build.xml
ssl/servidor/nbproject/: build-impl.xml  genfiles.properties
ssl/servidor/web/WEB-INF/: web.xml  wsit-org.prueba1.servidor.servidor.xml
